--- a/EmailRegisterApp/Web.config
+++ b/EmailRegisterApp/Web.config
@@ -14,6 +14,7 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <!--I'm Leonel Rojas -->
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
